default/objects/success__Channel__c/success__Channel__c.object-meta.xml
<CustomObject>
    <description>A Channel and the definition it contains specify the style (colours, fonts, background), Content Items (Leaderboards) and Audience Participation options that are to be displayed on an Inspire Edition display.</description>
    <label>Channel</label>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>