default/objects/success__Channel__c/fields/success__Active__c.field-meta.xml
<CustomField>
    <fullName>success__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>