default/objects/success__Channel__c/fields/success__ChatterGroupConnection__c.field-meta.xml
<CustomField>
    <fullName>success__ChatterGroupConnection__c</fullName>
    <label>Chatter Group Connection Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>