default/objects/success__Channel__c/fields/success__ChatterGroupId__c.field-meta.xml
<CustomField>
    <fullName>success__ChatterGroupId__c</fullName>
    <label>ChatterGroupId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>