default/objects/success__Channel__c/fields/success__ConfigJSON__c.field-meta.xml
<CustomField>
    <fullName>success__ConfigJSON__c</fullName>
    <label>ConfigJSON</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>