default/objects/success__Channel__c/fields/success__CurrentContentOrderJSON__c.field-meta.xml
<CustomField>
    <fullName>success__CurrentContentOrderJSON__c</fullName>
    <label>CurrentContentOrderJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>