default/objects/success__Channel__c/fields/success__External_Id__c.field-meta.xml
<CustomField>
    <fullName>success__External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>