default/objects/success__Channel__c/fields/success__PollJSON__c.field-meta.xml
<CustomField>
    <fullName>success__PollJSON__c</fullName>
    <label>PollJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>